Mention project skills template in applicant documentation

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -204,6 +204,16 @@ applicants. It might be better to apply to a community who is accepting a small 
 </p>
 
 <p>
+Projects will list the skills they want applicants to have.
+Project skills are listed with two different indicators:
+how much experience you need in a skill, and whether
+you are required to have that skill in order to apply.
+Please
+<a href="{% url 'project-selection' %}#project-skills-key">see the project skills key</a>
+on the project list for more information.
+</p>
+
+<p>
 Many people get overwhelmed with the list of projects and don't
 know how to choose a project! Our advice is to pick a community
 that has a mission that you're passionate about.
