--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -79,7 +79,7 @@ Outreachy Internships | Apply | Pick a Project
 	{% endif %}
 	{% endwith %}
 
-	<div class="card border-info mb-3">
+	<div class="card border-info mb-3" id='project-skills-key'>
 		<div class="card-header ">Project skills key</div>
 		<div class="card-body">
 			<p class="card-text">
