Add URL to RoundPage for blog post on picking a project.
Eventually this should be obsolete after we implement a tagging system.
For now, allow organizers to manually create the blog post and add a
link to it in the RoundPage. Add that link to the acceptance email and
the project selection page if it is set.

--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -132,6 +132,10 @@ Outreachy Internships | Apply | Pick a Project
 		able to see all project details at that point if your initial
 		application has been approved.</p>
 	{% elif not current_round.contributions_close.has_passed %}
+		{% if current_round.pick_a_project_blog_url %}
+			<p>Please also <a href='{{ current_round.pick_a_project_blog_url }}'>read our blog post that lists projects by topic and programming language</a>.</p>
+		{% endif %}
+
 		<h3>Final Applications Due {{ current_round.contributions_close }} at 4pm UTC</h3>
 
 		<p> The following projects are accepting contributions and applications from new
