Update eligibility URL in blog post on picking projects.
If someone hasn't filled out an initial application and they go to
eligibility-results, they'll get a 404. If they go to eligibility,
they'll get a nicer message. People who go to eligibility who have
filled out an initial application will be redirected to their results
page.

--- a/home/templates/home/blog/2019-10-01-picking-a-project.html
+++ b/home/templates/home/blog/2019-10-01-picking-a-project.html
@@ -13,7 +13,7 @@ Picking an Outreachy Project - December 2019 round
 <img src='https://www.outreachy.org/media/images/picking-an-outreachy-project_PKoSYLX.original.png' class="img-fluid" alt="Cherry Tomatoes CC-BY Dwight Sipler (modified)">
 <p><i>Photo CC BY 2.0 <a href='https://www.flickr.com/photos/photofarmer/6033999022/'>Dwight Sipler</a></i></p>
 
-<p>The contribution period for the December 2019 to March 2020 round is now open! Applicants with an approved initial application will make contributions to Outreachy's internship projects. If you filled out an initial application, please <a href='{% url 'eligibility-results' %}'>check your eligibility results</a> to see if you've been approved.</p>
+<p>The contribution period for the December 2019 to March 2020 round is now open! Applicants with an approved initial application will make contributions to Outreachy's internship projects. If you filled out an initial application, please <a href='{% url 'eligibility' %}'>check your eligibility results</a> to see if you've been approved.</p>
 
 <h2>Outreachy Project Selection</h2>
 
