Applicant Guide: Add instructions for how to create a final application

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -406,6 +406,13 @@ We encourage applicants to submit their final application at least a day before 
 You can edit your final application until the deadline.
 </p>
 
+<p>You will need to submit your final application through the Outreachy website. 
+Go to the <a href="{% url 'project-selection' %}">Outreachy project list</a>,
+and click the link for your project.
+On the page with project details, you should see a link to
+'record your contributions and create a final application'.
+</p>
+
 <p>The final application asks four questions:</p>
 
 <ul>
