Remove reference to projects with different deadlines.

--- a/home/templates/home/dashboard/email/contributor-deadline-reminder.html
+++ b/home/templates/home/dashboard/email/contributor-deadline-reminder.html
@@ -1,4 +1,4 @@
-<p>You'll need to send reminder email to applicants who have recorded a contribution. The emails will only remind applicants who have made a contribution to a project whose deadline hasn't passed yet:
+<p>Remind applicants who have recorded a contribution to create a final application:
 <ul>
 	<li>Send the email on {{ due }} at 4pm UTC.</li>
 </ul>
