Update instructions for strong applicants who missed the final application deadline

--- a/home/templates/home/dashboard/email/coordinator-intern-selection-reminder.html
+++ b/home/templates/home/dashboard/email/coordinator-intern-selection-reminder.html
@@ -1,4 +1,4 @@
-<p>After the contribution period is finished, email mentors and coordinators with instructions on how to select their intern:
+<p>After the contribution period is finished, email coordinators with instructions on what to do if a strong applicant misses the final application deadline:
 <ul>
 	<li>Send the email on {{ due }} after 4pm UTC.</li>
 </ul>
