Dashboard: Add statistics about the number of applicants who submitted a final application.

--- a/home/templates/home/dashboard/sponsor_statistics.html
+++ b/home/templates/home/dashboard/sponsor_statistics.html
@@ -5,6 +5,7 @@
 <ul>
 	<li>{{ current_round.number_accepted_initial_applications }} total applicants with accepted initial applications</li>
 	<li>{{ current_round.number_contributors }} applicants have recorded starting a contribution</li>
+	<li>{{ current_round.number_final_applicants }} applicants have created a final application</li>
 	<li>{{ current_round.number_approved_communities_with_projects }} communties with {{ current_round.number_approved_projects }} projects</li>
 	<li>{{ current_round.number_funded_interns }} secured internship spots</li>
 </ul>
