Fixes a grammar mistake in the contributions page

--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -141,7 +141,7 @@
 		you are welcome to continue making contributions to the projects you applied for.
 		We find that applicants often become passionate about their project, and get hooked on making contributions.
 		Many applicants who are selected for internships continue working past the final application deadline, although it is not required.
-		You can continue to record contributions interns are announced.
+		You can continue to record contributions until interns are announced.
 		</p>
 
 		<p>
