Add information about the tax form deadline to the internship documentation

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -36,7 +36,7 @@ Internship Guide | Outreachy Documentation
 	{% endif %}
 </ul>
 
-<p>The stipend is paid after organizers receive successful feedback from the project mentor. Interns will be required to fill out tax forms (either a W8-BEN or a W-9) in order to be paid.</p>
+<p>The stipend is paid after organizers receive successful feedback from the project mentor. Interns will be required to fill out tax forms (either a W8-BEN or a W-9) in order to be paid. If tax forms or payment routing information are turned in after the tax form deadline, the initial payment may be delayed.</p >
 
 {% if applicant_round %}
 	<p><b>{{ applicant_round.internstarts|date:'M Y' }} internships payment schedule:</b></p>
