--- a/home/templates/home/snippet/payment_schedule.html
+++ b/home/templates/home/snippet/payment_schedule.html
@@ -1,5 +1,6 @@
 <table class="table">
 	<tr><th width="175">{{ current_round.internstarts }}</th><td>Internships starts</td></tr>
+	<tr><th>{{ current_round.tax_form_deadline }}</th><td>Deadline to turn in tax forms and payment routing information</td></tr>
 	<tr><th>{{ current_round.initialfeedback }}</th><td>Initial feedback due</td></tr>
 	<tr><th>{{ current_round.initial_stipend_payment_deadline }}</th><td>The ${{ current_round.initialpayment }} initial stipend will be issued to interns with successful initial feedback</td></tr>
 	<tr><th>{{ current_round.midfeedback }} </th><td>Mid-point feedback due</td></tr>
