--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -125,13 +125,13 @@ Internship Guide | Outreachy Documentation
 {% if applicant_round %}
 	{% with current_round=applicant_round %}
 		<table class="table">
-			<tr><th width="175">{{ current_round.week_two_chat_text_date }}</th><td>Introduction chat - come get your questions answered!</td></tr>
-			<tr><th>{{ current_round.week_four_chat_text_date }}</th><td>Share something you're stuck on</td></tr>
-			<tr><th>{{ current_round.week_six_chat_text_date }}</th><td>Share why you're passionate about your project or community</td></tr>
-			<tr><th>{{ current_round.week_eight_chat_text_date }}</th><td>Share one "easy" project goal that took longer than expected</td></tr>
-			<tr><th>{{ current_round.week_ten_chat_text_date }}</th><td>(Alums invited!) Advancing your career</td></tr>
-			<tr><th>{{ current_round.week_twelve_chat_text_date }}</th><td>Networking skills</td></tr>
-			<tr><th>{{ current_round.week_fourteen_chat_text_date }}</th><td>Internship wrap up chat</td></tr>
+			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Introduction chat - come get your questions answered!</td></tr>
+			<tr><th>{{ current_round.week_four_chat_text_date }} UTC</th><td>Share something you're stuck on</td></tr>
+			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Share why you're passionate about your project or community</td></tr>
+			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Share one "easy" project goal that took longer than expected</td></tr>
+			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>(Alums invited!) Advancing your career</td></tr>
+			<tr><th>{{ current_round.week_twelve_chat_text_date }} UTC</th><td>Networking skills</td></tr>
+			<tr><th>{{ current_round.week_fourteen_chat_text_date }} UTC</th><td>Internship wrap up chat</td></tr>
 		</table>
 	{% endwith %}
 {% endif %}
