--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -108,6 +108,12 @@ Internship Guide | Outreachy Documentation
 
 <p>Please update your profile https://www.outreachy.org/account/ with a link to both the URL for your blog, and the RSS feed for your blog. For the RSS feed, you can specify either the entire blog feed, or a specific feed you want to be aggregated. Some interns add the RSS feed for their "outreachy" tag on their blog, so they can also blog about personal things.</p>
 
+<h3>How should I promote my blog?</h3>
+
+<p>You're welcome to post a link to your blog on Twitter. If you tag @outreachy, we'll retweet your post. It's best if you include a description of your blog post that would make sense to someone who isn't familiar with Outreachy. For example: "I'm an @outreachy intern with Wikimedia on PROJECT. Read more about my challenges during my first 3 weeks: URL".</p>
+
+<p>Ask your mentor if there are other community forums you should post your blog entries to. Some communities aggregate member's blog posts into one page. Your blog may need to have an RSS feed to be included in the community blog aggregate page.</p>
+
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 
 <h2 id='chats'><a href='#chats'>Chats with interns, mentors, and alums</a></h2>
