Specify interns should work 12 out of 13 weeks.
The Outreachy PLC approved lowering our work expectations in order to
account for common internship delays (sickness, internet outages, etc).

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -12,12 +12,26 @@ Internship Guide | Outreachy Documentation
 <h2 id='toc'>Table of Contents</h2>
 
 <p>
+<a href='#time-commitment'>Internship Time Commitment</a><br>
 <a href='#payments'>Payments</a><br>
 <a href='#blog'>Blogging</a><br>
 <a href='#chats'>Chats with interns, mentors, and alums</a>
 </p>
 
 <hr>
+<h2 id='time-commitment'><a href='#time-commitment'>Internship Time Commitment</a></h2>
+
+<p>Your project should be your primary focus during your internship. Unless contrary to any laws where you are located, you should dedicate 40 hours per week to your project for at least 12 weeks of the Outreachy internship's 13 week duration.</p>
+
+<p>Outreachy understands that interns may be temporarily interrupted from working on their project. You may get sick or have to deal with extreme weather. You may have a power outage or internet outage. Your computer may break down. You may want to spend time with your family on during a holiday or vacation.</p>
+
+<p>As stated above, we expect interns to work 40 hours a week for at least 12 weeks of the 13 week internship. Please let your mentor know if you are not working on the project for a short period of time.</p>
+
+<p>Rarely, interns work less than full-time, or cannot work for all 12 weeks. In that case, interns will need to arrange an internship extension with their mentor. Mentors recommend interns for extensions at the initial, mid-point, and final feedback dates. Outreachy organizers will confirm the extension with interns and mentors via email.</p>
+
+<p>Internships can be extended for up to five weeks. Internships cannot be extended for more than 5 weeks. We cannot allow an internship to be stopped and then later restarted.</p>
+
+<p>When an internship is extended, the feedback dates and payment dates will be shifted by the amount of the internship extension.</p>
 
 <h2 id='payments'><a href='#payments'>Payments</a></h2>
 
