--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -159,13 +159,13 @@ Internship Guide | Outreachy Documentation
 {% if intern_round %}
 	{% with current_round=intern_round %}
 		<table class="table">
-			<tr><th width="175">{{ current_round.internship_week_1_email_date }}</th><td>Blog prompt: "Experiences applying to Outreachy"</td></tr>
-			<tr><th>{{ current_round.internship_week_3_email_date }}</th><td>Blog prompt: "Everybody struggles"</td></tr>
-			<tr><th>{{ current_round.internship_week_5_email_date }}</th><td>Blog prompt: "Think about your audience"</td></tr>
-			<tr><th>{{ current_round.internship_week_7_email_date }}</th><td>Mid-point project progress blog post</td></tr>
-			<tr><th>{{ current_round.internship_week_9_email_date }}</th><td>Blog prompt: "Career opportunities"</td></tr>
-			<tr><th>{{ current_round.internship_week_11_email_date }}</th><td>No blog post - interns work on their resume</td></tr>
-			<tr><th>{{ current_round.internship_week_13_email_date }}</th><td>Final project progress blog post</td></tr>
+			<tr><th width="250">{{ current_round.week_two_chat_text_date }} UTC</th><td>Introduction chat - come get your questions answered!</td></tr>
+			<tr><th>{{ current_round.week_four_chat_text_date }} UTC</th><td>Share something you're stuck on</td></tr>
+			<tr><th>{{ current_round.week_six_chat_text_date }} UTC</th><td>Share why you're passionate about your project or community</td></tr>
+			<tr><th>{{ current_round.week_eight_chat_text_date }} UTC</th><td>Share one "easy" project goal that took longer than expected</td></tr>
+			<tr><th>{{ current_round.week_ten_chat_text_date }} UTC</th><td>(Alums invited!) Advancing your career</td></tr>
+			<tr><th>{{ current_round.week_twelve_chat_text_date }} UTC</th><td>Networking skills</td></tr>
+			<tr><th>{{ current_round.week_fourteen_chat_text_date }} UTC</th><td>Internship wrap up chat</td></tr>
 		</table>
 	{% endwith %}
 {% endif %}
