Add view for internship contact list
During an Outreachy internship, organizers often need to contact the
mentors and coordinators for a particular intern. Organizers also need
to invite all interns to the Zulip chat.

This view gives:
 - a list of emails for all interns whose internship hasn't ended
 - a list of all emails for mentors and coordinators with an active
internship
 - a list of all active internships with community, project title,
   and contact information for the intern, mentors, and coordinators.
   The list also shows if the intern has custom internship dates.

TODO: decide whether this list should link to intern feedback details

TODO: delete other page that only shows active mentors and coordinators
- this page does that, plus more.

TODO: write tests for this view

--- a/home/templates/home/dashboard/staff_subscriptions.html
+++ b/home/templates/home/dashboard/staff_subscriptions.html
@@ -30,3 +30,14 @@ Then subscribe them using the following links (anyone already subscribed won't b
 	<li><a href="https://lists.outreachy.org/cgi-bin/mailman/admin/mentors/members/add">mentors mailing list</a></li>
 	<li><a href="https://lists.outreachy.org/cgi-bin/mailman/admin/announce/members/add">announce mailing list</a></li>
 </ul>
+
+<p>
+You'll also need to subscribe people to the Zulip chat manually.
+Use the volunteer email list above to get all mentors and coordinators.
+You can use the following link to see a list of all intern emails,
+and get a contact list for all intern's mentors and coordinators.
+</p>
+
+<p>
+<a href="{% url 'active-internship-contacts' %}">See the active internship email contacts list.</a>
+</p>
