Sponsors: Add Creative Commons job links to opportunities page

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -74,6 +74,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://jobs.cisco.com/">Cisco</a>  </p></li>
                 <li><p><a href="http://www.cloudera.com/content/cloudera/en/about/careers.html">Cloudera</a>  </p></li>
                 <li><p><a href="https://www.codeweavers.com/about/jobs">CodeWeavers</a> (Wine jobs)  </p></li>
+                <li><p><a href="https://creativecommons.org/about/team/opportunities/">Creative Commons</a></p></li>
                 <li><p><a href="https://endlessm.com/about-us">Endless</a> (GNOME jobs)  </p></li>
                 <li><p><a href="http://evergreen-ils.org/governance/">Evergreen ILS</a>'s board member affiliations  </p></li>
                 <li><p><a href="https://careers-redhat.icims.com/jobs/search?Keyword=fedora">Fedora</a>  </p></li>
