Docs: Add more guidance on length of blog post and alternatives to the prompts

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -108,10 +108,6 @@ Internship Guide | Outreachy Documentation
 	{% endwith %}
 {% endif %}
 
-<h3>How long should a blog post take to write?</h3>
-
-<p>Blog posts don't need to be perfect! You shouldn't spend more than 1-3 hours on the post. Your mid-point and final project progress blog post may take longer than your other blog posts. Blogging shouldn't take priority over working on your internship project.</p>
-
 <h3>Where should I create a blog?</h3>
 
 <p>Outreachy organizers recommend creating a blog that runs on free software. Our recommendations is to use <a href="https://wordpress.com/">Wordpress</a> or <a href="http://www.dreamwidth.org">Dreamwidth</a>.
@@ -122,9 +118,34 @@ Internship Guide | Outreachy Documentation
 
 <p>Please update your profile https://www.outreachy.org/account/ with a link to both the URL for your blog, and the RSS feed for your blog. For the RSS feed, you can specify either the entire blog feed, or a specific feed you want to be aggregated. Some interns add the RSS feed for their "outreachy" tag on their blog, so they can also blog about personal things.</p>
 
+<h3>How long should a blog post take to write?</h3>
+
+<p>Blog posts don't need to be perfect! You shouldn't spend more than 1-3 hours on the post. Your mid-point and final project progress blog post may take longer than your other blog posts. Blogging shouldn't take priority over working on your internship project.</p>
+
+<h3>How much should I write?</h3>
+
+<p>A good rule of thumb is that blog posts should take about 3 to 5 minutes to read. If it takes longer than that, you may want to break up it up into multiple blog posts.</p>
+
+<h3>What if I don't want to use the blog post prompt?</h3>
+
+<p>That's fine! The blog post prompts are designed to give inspiration for interns to write. If you don't like the blog post prompt, or it doesn't apply to you, write something else. You can give a status update on your project instead. Or you could talk about something you're stuck on. Or you could introduce a new tool or skill you learned. Or you could talk about what it's like to work in your free software community.</p>
+
+<p>You're still required to blog every two weeks. The goal is to share your experiences during the internship, and your progress on your project. Even a short update (a paragraph or two) is good.</p>
+
+<h3>Do I have to answer all the blog post prompt questions?</h3>
+
+<p>The blog post prompts often include a series of questions. You don't have to answer every question in the prompt. You can pick and choose which questions are most interesting to you. The goal is to inspire you to write a blog post, not to dictate exactly what you should talk about.</p>
+
 <h3>How should I promote my blog?</h3>
 
-<p>You're welcome to post a link to your blog on Twitter. If you tag @outreachy, we'll retweet your post. It's best if you include a description of your blog post that would make sense to someone who isn't familiar with Outreachy. For example: "I'm an @outreachy intern with Wikimedia on PROJECT. Read more about my challenges during my first 3 weeks: URL".</p>
+<p>You're welcome to post a link to your blog on Twitter. If you tag @outreachy, we'll retweet your post. It's best if you include a description of your blog post that would make sense to someone who isn't familiar with Outreachy.</p>
+
+<p>Examples:</p>
+<ul>
+	<li>"Want a remote internship working on free software? Read my blog post on how I got an @outreachy internship with Public Lab: URL".</li>
+	<li>"I'm an @outreachy intern with Wikimedia on PROJECT. Read more about my challenges during my first 3 weeks: URL"</li>
+	<li>"My @outreachy internship with Debian is half-way done! Read about the progress I've made on PROJECT: URL".</li>
+</ul>
 
 <p>Ask your mentor if there are other community forums you should post your blog entries to. Some communities aggregate member's blog posts into one page. Your blog may need to have an RSS feed to be included in the community blog aggregate page.</p>
 
