Add link to internship guide and applicant guide to apply page
People often don't look in the menu for information. Most people who are
looking for information about applying to Outreachy eventually end up on
the eligibility page. (And then they send us email asking when the
application period will be open.)

Link to the applicant guide and internship guide on this page. The page
at /apply/ is under Wagtail CMS control, so links will have to be added
to the guides manually through the website.

--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -28,6 +28,17 @@
 
 <p>If you are concerned about these forms, please note that Outreachy has experience with people in the middle of a legal name change and transgender people who cannot change their legal name. Only Outreachy organizers and the Software Freedom Conservancy accounting team will see these legal documents. Your mentors will not see your tax form or your signed intern agreement.</p>
 
+<h2>Applicant Guide</h2>
+<p>
+<a href='{% url 'docs-applicant' %}'>Please read our Applicant Guide.</a>
+The Applicant Guide includes tips for getting your initial application accepted. It also includes tips for preparing for the contribution period and writing your final application.
+</p>
+
+<h2>Internship Guide</h2>
+<p>
+The Outreachy <a href='{% url 'docs-applicant' %}'>Internship Guide</a> includes detailed information about the internship schedule, payment schedule, blogging schedule, and other details.
+</p>
+
 {% if not current_round.initial_applications_open.has_passed %}
 	<h2>Initial Application</h2>
 
