Travel stipend: Add PyCon U.S. to conference list

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -175,6 +175,12 @@ Outreachy Travel Stipend
 		<td>November</td>
 	</tr>
 	<tr>
+		<td>United States of America - Varies</td>
+		<td><a href="http://us.pycon.org">PyCon U.S.</a></td>
+		<td>December</td>
+		<td>April or May</td>
+	</tr>
+	<tr>
 		<td>Varies</td>
 		<td><a href="https://debconf.org/">Debian Developer's Conference (DebConf)</a></td>
 		<td>January</td>
