Intern dashboard: remove defunct mailing list.
Now that we have the Outreachy Zulip chat, the communities mailing list
is depreciated.

--- a/home/templates/home/dashboard/intern.html
+++ b/home/templates/home/dashboard/intern.html
@@ -14,16 +14,12 @@
 		<p>You signed your internship contract on {{ internship.intern_contract.date_signed }}. <a href="{% url 'intern-contract-export' %}">Download your contract</a>.</p>
 	{% endif %}
 
-	<h2>Outreachy Mailing Lists</h2>
-	<p>There are two mailing lists you may want to sign up for:
-	<ul>
-		<li>The <a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/community">community mailing list</a> is only for current interns, alumni, and current and past mentors of Outreachy.
-	You can chit-chat on the list, ask for help, talk about conferences, ask for career advice, and more.
-		</li>
-		<li>The <a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/opportunities">opportunities mailing list</a> is open to anyone who is eligible for the community list, and it is also open to sponsors of the Outreachy program.
+	<h2>Outreachy Opportunities Mailing List</h2>
+	<p>
+	You may want to sign up for the <a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/opportunities">opportunities mailing list</a>.
+	The list is open to current interns, alums, current and past Outreachy mentors, and sponsors of Outreachy.
 	People use this list to send job postings, other internships, conference CFPs, or other opportunities.
-		</li>
-	</ul>
+	If you see an opportunity that might help your fellow Outreachy interns, please send it to the list!
 	<p>
 
 	<h2>Travel Stipend</h2>
