--- a/home/templates/home/dashboard/intern.html
+++ b/home/templates/home/dashboard/intern.html
@@ -22,6 +22,12 @@
 	If you see an opportunity that might help your fellow Outreachy interns, please send it to the list!
 	<p>
 
+	<h2>Internship Documentation</h2>
+
+	<p>
+	Details about your internship are documented in the <a href='{% url 'docs-internship' %}'>Internship Guide</a>.
+	</p>
+
 	<h2>Travel Stipend</h2>
 
 	<p><b>Please read the <a href="{% url 'travel-stipend' %}">travel stipend details</a> before booking your travel!</b></p>
