--- a/home/templates/home/snippet/eligibility_rules.html
+++ b/home/templates/home/snippet/eligibility_rules.html
@@ -4,5 +4,5 @@
 	<li>You have not previously participated in an Outreachy, Outreach Program for Women, or Google Summer of Code internship. People who participated as an intern for Google Summer of Code are not eligible for Outreachy. All Google Summer of Code participants are ineligible for Outreachy, including people who did not successfully finish their GSoC internship.</li>
 	<li>You are available for a full-time, 40 hours a week internship from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
 	<li>Outreachy is open to both students and people who are not students. {% include 'home/snippet/student_hemisphere.html' %} If you are completing your last term for your degree, you may be eligible, and we encourage you to submit an initial application.</li>
-	<li>Outreachy internships are full-time 40-hour a week internships. Applicants who have part-time or contracting jobs are welcome to apply, but they must meet additional requirements.
+	<li>Applicants who have part-time or contracting jobs are welcome to apply. People who are willing to quit their full-time job are welcome to apply. If you cannot quit your full-time job, you are not eligible for Outreachy. People who are taking a leave of absence from a full-time job are not eligible for Outreachy.</li>
 </ul>
