Fix typo in applicant details seen by mentor

--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -223,7 +223,7 @@ that timeline, taking into account any time commitments the applicant has.
 				<p><i>Google Summer of Code communities and projects the applicant is applying for, and the mentor contact information for those projects:</i></p>
 				<pre>{{ final_application.applying_to_gsoc }}</pre>
 				{% else %}
-				<p><i>You are not applying to Google Summer of Code.</i></p>
+				<p><i>Applicant is not applying to Google Summer of Code.</i></p>
 				{% endif %}
 				<p><i>Timeline of tasks for the internship period:</i></p>
 				<pre>{% if final_application.timeline %}{{ final_application.timeline }}{% else %}TBD{% endif %}</pre>
