Docs: Set expectations for career development and mentorship for applicants
Some Outreachy applicants have high expectations for the Outreachy
internship. We need to let them know exactly what is required of the
Outreachy mentors, and what we provide in terms of career development
opportunities.

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -23,6 +23,7 @@ Applicant Guide | Outreachy Documentation
 <a href="#make-contributions">Making Contributions</a><br>
 <a href='#final-application'>Final application</a><br>
 <a href='#intern-announcement'>Intern announcement</a><br>
+<a href='#internship'>Internship</a><br>
 </p>
 
 <hr>
@@ -429,5 +430,10 @@ On the page with project details, you should see a link to
 <p>Intern selections are not shared with applicants until <a href='{% url 'alums' %}'>interns are announced</a> on {{ current_round.internannounce }} at 4pm UTC.</p>
 
 <p>If you want more details about the internship, please read our <a href='{% url 'docs-internship' %}'>Internship guide</a>.
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='internship'><a href='#internship'>Internship</a></h2>
+
+<p>Applicants are encouraged to read the <a href='{% url 'docs-internship' %}'>Internship Guide</a>. The Internship Guide talks about what we expect from interns. It also talks about what interns can expect of mentors and what to expect in terms of career development opportunities.</p>
 
 {% endblock %}
