--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -13,6 +13,8 @@ Internship Guide | Outreachy Documentation
 
 <p>
 <a href='#time-commitment'>Internship Time Commitment</a><br>
+<a href='#mentor-expectations'>Mentor Expectations</a><br>
+<a href='#career-development'>Career Development</a><br>
 <a href='#payments'>Payments</a><br>
 <a href='#blog'>Blogging</a><br>
 <a href='#chats'>Chats with interns, mentors, and alums</a>
@@ -33,6 +35,36 @@ Internship Guide | Outreachy Documentation
 
 <p>When an internship is extended, the feedback dates and payment dates will be shifted by the amount of the internship extension.</p>
 
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='mentor-expectations'><a href='#mentor-expectations'>Mentor Expectations</a></h2>
+
+<p>Outreachy mentors should provide:</p>
+<ul>
+	<li>A project for the intern to work on</li>
+	<li>5 hours per week of mentoring - including answering questions, reviewing contributions, and meeting with interns</li>
+	<li>A real-time meeting at least once a week - either through real-time chat, video conference, or phone</li>
+	<li>Detailed and timely review of contributions - if a mentor is unable to provide contribution review, they are responsible for finding community members who can</li>
+	<li>Guidance to interns about how to work in an open source community</li>
+	<li>Guidance to interns about time management</li>
+</ul>
+
+<p>If your mentor is not meeting the above expectations, please <a href="{% url 'contact-organizers' %}">contact the Outreachy organizers</a>.</p>
+
+<p>Outreachy mentors are focused on helping interns complete their project. Some mentors provide career advice or help connecting to the larger open source community, but it is not required for mentors to do so. Please see the career development section below.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='career-development'><a href='#career-development'>Career Development</a></h2>
+
+<p>Outreachy is working to improve the career development services we offer interns. We currently offer a very limited set of career development opportunities:</p>
+
+<ul>
+	<li>Resume review</li>
+	<li>Encouragement to conduct informational chats with open source professionals during week 9 of the internship</li>
+</ul>
+
+<p>An Outreachy internship is not a guarantee that you will find a job with an Outreachy sponsor. Some applicants pick their internship because they want to network with open source contributors who work for a particular company. However, you may end up working with open source contributors who are volunteers or work for other companies. Outreachy interns should be open to networking and working with all open source contributors, regardless of who they work for.</p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
 <h2 id='payments'><a href='#payments'>Payments</a></h2>
 
 <p>Outreachy interns are paid $5,500 USD total for three months of work. The stipend is paid in three parts:</p>
