Add GitLab to opportunities list

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -61,6 +61,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
             <ul>
                 <li><p><a href="https://www.digitalocean.com/company/careers/">DigitalOcean</a>  </p></li>
                 <li><p><a href="https://www.gatsbyjs.com/careers/">Gatsby</a></p></li>
+                <li><p><a href="https://about.gitlab.com/jobs/">GitLab</a></p></li>
                 <li><p><a href="https://www.ffmpeg.org/">FFmpeg</a>  </p></li>
                 <li><p><a href="https://mapzen.com/jobs">Mapzen</a> (OpenStreetMap jobs)  </p></li>
                 <li><p><a href="https://owncloud.com/jobs">ownCloud</a>  </p></li>
