Correct page title for promotion page

--- a/home/templates/home/promote.html
+++ b/home/templates/home/promote.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} 
 {% block title %}
-Call for Outreachy community coordinators and mentors
+Promote Outreachy internships
 {% endblock %}
 
 {% block content %}
